[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/textures/GUI/panel.png" type="Texture" id=1]
[ext_resource path="res://GUI/ItemButton.gd" type="Script" id=2]

[node name="EquipmentButton" type="TextureButton"]
modulate = Color( 1, 1, 1, 0.780392 )
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ItemTexture" type="Sprite" parent="."]
centered = false
[connection signal="quantity_changed" from="." to="." method="_on_ItemButton_quantity_changed"]
